[package]
name = "immutag"
version = "0.1.0"
authors = ["7db9a"]
edition = "2018"

[[bin]]
name = "immutag"
path = "src/bin/main.rs"
doc = false

[lib]
name = "immutag"
path = "src/immutag.rs"

[dependencies]
clap = "~2.33.0"
failure = "0.1.5"
toml = "0.5"
toml_edit = "0.1.5"
rusqlite = "0.22.0"
git2 = "0.9.1"
