[package]
name = "immutag-bitcoin"
version = "0.1.0"
authors = ["7db9a"]
edition = "2018"

[lib]
name = "immutag_bitcoin"
path = "src/mod.rs"

[dependencies]
clap = "~2.33.0"
failure = "0.1.5"
toml = "0.5"
toml_edit = "0.1.5"
rusqlite = "0.22.0"
git2 = "0.9.1"
sv = "0.1.11"
hex = "0.3"
ring = "0.14"
