[package]
name = "immutag"
version = "0.1.0"
authors = ["7db9a"]
edition = "2018"

[[bin]]
name = "immutag"
path = "src/bin/main.rs"
doc = false

[lib]
name = "immutag"
path = "src/mod.rs"

[dependencies]
clap = "~2.33.0"
immutag-bitcoin = { path = "../immutag-bitcoin" }
immutag-local-files = { path = "../immutag-local-files" }
